# teithetsskalaen-backend

./: .env  Cargo.toml
migrations/: 1_teithet.sql  2_votes.sql
src/: app.rs  config.rs  error.rs  main.rs
src/controller/: teithet.rs
src/model/api/: mod.rs  teithet.rs
src/repository/: mod.rs
src/service/: mod.rs  read_service.rs  write_service.rs
