[package]
name = "teithetsskalaen-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.7.1"
serde = "1.0.193"
serde_json = "1.0.108"
dotenvy = "0.15.7"
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
async-trait = "0.1.74"
sqlx = {version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"]}
