[package]
name = "teithetsskalaen-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
axum = "0.7.4"

tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

validator = { version = "0.16.1", features = ["derive"] }

serde = "1.0.196"
serde_json = "1.0.112"
serde_with = { version = "3.5.1", features = ["time_0_3"] }

dotenvy = "0.15.7"

futures = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
async-trait = "0.1.74"

sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }

time = "0.3.31"
